﻿IMPROVEMENTS / FIXES
- General:
	- Make ammo consumption respect staging and priority order.
- AI:
	- Make the autotuning re-centering distance customisable.
	- Add unclamped max values for auto-tuning speed and altitude.
- Vessel Spawning:
	- Disable gravity easing when using 'Warp Here' above 10m altitude.

v1.6.3.0
IMPROVEMENTS / FIXES
- General:
	- Archive the defunct KSPedia files, reducing the size of the BDArmory zip file by around 24MB.
- UI:
	- Add a button for resetting the scroll-zoom rate to 1 when "Debug Other" is enabled.
	- Lock input to the numeric field when inputting values in custom log and semi-log sliders.
	- Don't apply slider rounding when setting up log and semi-log sliders.
- Vessel Spawning:
	- Adjust intra-team spacing to scale better with distance.
	- Fix the inward/outward facing direction when spawning teams and use the same facing direction for all members of a team.
- Detectors:
	- Now properly sends correct radar lock to SARH missiles when firing at multiple targets with a multi-lock radar.
	- Properly lock SARH missiles when manually firing them.
	- Equipping multiple lock-capable radars increases total radar locks the vessel can support.
	- Attempting a radar lock will now check all radars capable of locking instead of just the first.
- AI:
	- Smoothly vary the roll target during gain alt behaviour from the surface normal to vertical to avoid clipping wings into terrain when taking off on uneven terrain.
	- Don't store/restore fields that are reference types.
	- Make sure Time Override gets disabled when the AI gets destroyed if auto-tuning was enabled (should prevent it from being active unintentionally during competitions).
	- Hide the 3-axis dynamic damping button when dynamic damping is disabled.
	- Move the dynamic damping toggles to before the sliders to stop them from jumping around when toggled.
	- Fix the PID field ordering when the PAW is first opened.